# FridayCharts

./: .gitignore  README.md  main.py  normalized_dict.json  pyproject.toml
data/: world_trade_1929_1933.csv
notebooks/: 01_unified_growth.ipynb  04_kindleberger_spiral.ipynb
src/: 02_semiconductor_getting_data.py  02_semiconductor_normalizing_data.py  03_ngram_data_finder.py
